# diceroll-pyqt6-spring24P8

./: README.md  pyproject.toml
diceroll-calculator/: pyproject.toml
diceroll_calculator/: app.py
pyqt6-diceroll/: pyproject.toml
resources/: styles.qss.txt
